Fix ul margin for improved alignment in mystyle.css

--- a/introduction/css/mystyle.css
+++ b/introduction/css/mystyle.css
@@ -37,6 +37,7 @@ ul {
   color: indigo;
   line-height: 1.8;
   display: inline-block;
+  margin: 0 auto;
 }
 
 li {
